Improve BBCodes for multi-line content

--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -139,6 +139,10 @@ p a,
     display: inline;
   }
 
+  &:is(div) {
+    white-space: break-spaces;
+  }
+
   &:is(blockquote, p) {
     display: block;
   }
@@ -147,7 +151,8 @@ p a,
     pointer-events: none;
   }
 
-  > * {
+  > *,
+  a {
     color: inherit !important;
   }
 
