Fix box shadow for chapter grid view
Could have sworn I already did that.

--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -463,7 +463,7 @@ $header_breakpoint: 640px;
         padding: .5rem;
         border: none !important; // Accounts for minimalist mode
         border-radius: var(--layout-border-radius-small); // Accounts for minimalist mode
-        filter: var(--container-drop-shadow);
+        box-shadow: var(--container-box-shadow);
 
         &-icon {
           display: none;
