--- a/src/scss/_notifications.scss
+++ b/src/scss/_notifications.scss
@@ -36,7 +36,7 @@
     border-radius: var(--layout-border-radius-small);
     transition: opacity var(--transition-duration);
     max-width: min(375px, calc(100vw - 32px));
-    filter: var(--container-drop-shadow);
+    box-shadow: var(--container-box-shadow);
 
     a {
       &:hover {
