--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     gap: .75rem;
 
-    > a {
+    .button {
       display: flex;
       align-items: center;
       gap: .5rem;
