--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -281,6 +281,12 @@
       font-size: 13px; // Minimum desktop and mobile
       line-height: 1.3;
     }
+
+    &._hidden-result {
+      font-weight: var(--font-weight-strong);
+      text-align: center;
+      opacity: 0.25;
+    }
   }
 
   &__by-author {
