Apply caps  to default taxonomies

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -25,6 +25,10 @@ td.comment {
   }
 }
 
+.edit-term-notes {
+  display: none;
+}
+
 // =============================================================================
 // CUSTOMIZER
 // =============================================================================
