Continue style update

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -126,6 +126,9 @@ body[class*="page_fictioneer"] {
     --checkbox-toggle-background-color: #ddd;
     --checkbox-toggle-background-color-hover: #d6d6d6;
     --checkbox-toggle-background-color-active: #646970;
+
+    --input-background-color: #e9ecec;
+    --input-checkbox-background-color-checked: #2271b1;
   }
 }
 
