Some more style updates

--- a/src/scss/admin/_base.scss
+++ b/src/scss/admin/_base.scss
@@ -14,7 +14,7 @@
   }
 
   hr {
-    border-top: 1px solid var(--bg-200);
+    border-top: 1px solid var(--hr-color);
     border-bottom: 0;
     margin: var(--16bp) 0;
   }
@@ -36,13 +36,13 @@
 
   code {
     display: block;
-    background: var(--bg-800);
-    color: var(--text-400);
+    background: var(--code-background-color);
+    color: var(--code-color);
     font-family: Consolas, Monaco, monospace;
     font-size: var(--fs-xxs);
     line-height: 1.7;
     padding: var(--12bp);
-    border-radius: var(--large-border-radius);
+    border-radius: 2px;
     overflow: scroll;
 
     pre {
@@ -71,7 +71,7 @@
     border-radius: 2px;
 
     &::placeholder {
-      color: var(--text-400);
+      color: var(--input-color-placeholder);
     }
 
     &:focus {
@@ -79,7 +79,7 @@
     }
 
     &:not([type=checkbox], [type=radio], [readonly], .button):focus {
-      box-shadow: inset 0 0 0 2px var(--primary-500);
+      box-shadow: inset 0 0 0 2px var(--input-border-color-active);
     }
 
     &[readonly]:focus {
@@ -87,7 +87,7 @@
     }
 
     &:is([type=checkbox], [type=radio]):focus-visible {
-      box-shadow: 0 0 0 1px white, 0 0 0 3px var(--primary-500);
+      box-shadow: 0 0 0 1px white, 0 0 0 3px var(--input-border-color-active);
     }
 
     &:not(.invalid) {
@@ -128,10 +128,6 @@
   select {
     padding: 0 8px;
     height: 32px;
-
-    &:focus {
-      background-color: var(--bg-50);
-    }
   }
 
   select {
