--- a/src/scss/admin/_elements.scss
+++ b/src/scss/admin/_elements.scss
@@ -1,7 +1,7 @@
 & {
   .sub-label {
     display: block;
-    color: var(--text-500);
+    color: var(--sublabel-text-color);
     font-size: var(--fs-xxs);
     line-height: 1.5;
     margin: var(--2bp) 2px 0;
@@ -22,7 +22,7 @@
       &:not(:checked) {
         ~ * {
           input {
-            color: var(--text-400);
+            color: var(--input-color-disabled);
           }
         }
       }
@@ -142,7 +142,7 @@
   }
 
   .description {
-    color: var(--text-500);
+    color: var(--description-text-color);
 
     &:not(.row, :first-child) {
       margin-top: var(--4bp);
@@ -150,10 +150,6 @@
 
     &:not(.row, :last-child) {
       margin-bottom: var(--4bp);
-    }
-
-    strong {
-      color: var(--text-600);
     }
   }
 
@@ -217,7 +213,7 @@
       line-height: 1.3;
       padding: 4px 6px;
       margin: 0 4px;
-      border-radius: var(--large-border-radius);
+      border-radius: 2px;
       transform: translateY(-3px);
       width: fit-content;
 
@@ -252,7 +248,7 @@
     left: 0;
     z-index: 100;
     background: var(--bg-800);
-    border-radius: var(--large-border-radius);
+    border-radius: 2px;
     min-width: 64px;
     overflow: hidden;
     box-shadow: var(--popup-shadow);
@@ -336,7 +332,7 @@
       cursor: pointer;
 
       &:hover {
-        color: var(--primary-600);
+        color: var(--highlight-color);
       }
     }
   }
@@ -346,7 +342,7 @@
       display: none;
 
       &:checked + .capability-checkbox__name {
-        color: var(--text-50);
+        color: var(--checkbox-toggle-color-active);
         background: var(--checkbox-toggle-background-color-active);
 
         &:hover {
