--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -101,6 +101,7 @@ body[class*="page_fictioneer"] {
   &.admin-color-fresh {
     --focus-color: #ef4d4d;
     --focus-box-shadow: 0 0 0 1px #4f94d4, 0 0 2px 1px rgba(79, 148, 212, .8);
+    --highlight-color: #72aee6;
 
     --header-heading-color: #fff;
     --header-background-color: #1d2327;
@@ -126,9 +127,21 @@ body[class*="page_fictioneer"] {
     --checkbox-toggle-background-color: #ddd;
     --checkbox-toggle-background-color-hover: #d6d6d6;
     --checkbox-toggle-background-color-active: #646970;
+    --checkbox-toggle-color-active: #fff;
 
     --input-background-color: #e9ecec;
     --input-checkbox-background-color-checked: #2271b1;
+    --input-color-placeholder: #646970;
+    --input-color-disabled: #858a93;
+    --input-border-color-active: #2271b1;
+
+    --description-text-color: inherit;
+    --sublabel-text-color: #646970;
+    --subtext-color: #646970;
+
+    --hr-color: #c3c4c7;
+    --code-background-color: #2c3337;
+    --code-color: #fff;
   }
 }
 
