--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -155,6 +155,8 @@ body[class*="page_fictioneer"] {
     --subnav-background-color: #46403b;
     --subnav-item-color: #cdcbc9;
 
+    --checkbox-toggle-background-color-active: #615851;
+
     --input-checkbox-background-color-checked: #59524c;
     --input-border-color-active: #c7a589;
   }
