--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -174,6 +174,32 @@ body[class*="page_fictioneer"] {
     --input-checkbox-background-color-checked: #59524c;
     --input-border-color-active: #c7a589;
   }
+
+  &.admin-color-light {
+    --header-heading-color: #333;
+    --header-background-color: #e5e5e5;
+    --header-note-color: #686868;
+    --header-note-color-active: #d64e07;
+    --header-nav-item-color: #686868;
+    --header-nav-item-color-hover: #686868;
+    --header-nav-item-background-active: #888;
+    --header-nav-item-background-hover: #f9f9f9;
+
+    --subnav-background-color: #fff;
+    --subnav-item-color: #686868;
+    --subnav-item-color-hover: #333;
+    --subnav-item-color-active: #333;
+    --subnav-item-border-color-active: #888;
+
+    --checkbox-toggle-background-color: #e5e5e5;
+    --checkbox-toggle-background-color-hover: #ddd;
+    --checkbox-toggle-background-color-active: #888;
+
+    --code-background-color: #222;
+
+    --input-checkbox-background-color-checked: #888;
+    --input-border-color-active: #04a4cc;
+  }
 }
 
 .fictioneer-settings {
